# BoredPanda

./: Example.ipynb  README.md  main.py  pyproject.toml
src/: __init__.py  basebot.py  nltk_requirements.py  utils.py
src/.ipynb_checkpoints/: Untitled-checkpoint.ipynb
src/nn/: base.py
utils/: __init__.py  pdf2text.py
